# homekit-upkeep

./: .gitignore  README.md  pyproject.toml
examples/: config.json
homekit_upkeep/: __init__.py  accessory.py  http_api.py  main.py  schedule.py  store.py
